--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 html {
-    width: 100%;
-    height: 100%;
     font-family: arial;
 }
 
@@ -12,7 +10,7 @@ body {
         "nav header"
         "nav main";
 
-    height: 100%;
+    height: 100vh;
     margin: 0;
 }
 
@@ -32,10 +30,30 @@ main {
     grid-area: main;
 }
 
+nav > * {
+    margin: 0;
+    padding: 0;
+}
+
+#title {
+    display: flex;
+    align-items: center;
+    padding-bottom: 40px;
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav ul li {
+    padding: 5px;
+}
+
 #title::before {
     background-image: url("images/view-dashboard.svg");
     display: inline-block;
     content: "";
-    width: 2em;
-    height: 2em;
+    width: 1.8em;
+    height: 1.8em;
+    margin-right: 10px;
 }
