--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ nav {
     background: #1c94d3;
     color: white;
     grid-area: nav;
-    padding: 15px 50px 15px 15px;
 }
 
 header {
@@ -32,13 +31,19 @@ main {
 
 nav > * {
     margin: 0;
-    padding: 0;
+    padding: 15px 50px 15px 15px;
 }
 
 #title {
     display: flex;
     align-items: center;
-    padding-bottom: 40px;
+    font-size: 1.5em;
+}
+
+#title svg {
+    height: 1.8em;
+    width: 1.8em;
+    padding-right: 5px;
 }
 
 nav ul {
@@ -49,11 +54,6 @@ nav ul li {
     padding: 5px;
 }
 
-#title::before {
-    background-image: url("images/view-dashboard.svg");
-    display: inline-block;
-    content: "";
-    width: 1.8em;
-    height: 1.8em;
-    margin-right: 10px;
+svg {
+    fill: currentColor;
 }
