--- a/style.css
+++ b/style.css
@@ -38,24 +38,17 @@ svg {
 }
 
 nav {
-    & > * {
+    &>* {
         margin: 0;
-        padding: 15px 50px 15px 15px;
+        padding: 30px 0px;
     }
 
     & a {
+        padding: 5px 50px 5px 15px;
         color: inherit;
         text-decoration: inherit;
-    }
-
-    & a:hover {
-        backdrop-filter: brightness(85%);
-    }
-
-    & #title {
         display: flex;
         align-items: center;
-        font-size: 1.5em;
 
         & svg {
             height: 1.8em;
@@ -64,12 +57,21 @@ nav {
         }
     }
 
+    & a:hover {
+        backdrop-filter: brightness(85%);
+    }
+
+    & #title {
+        font-size: 1.5em;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
     & ul {
         list-style: none;
 
         & li {
-            padding: 5px;
+            padding: 0;
         }
     }
 }
-
