--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
         "nav header"
         "nav main";
 
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
 }
 
@@ -38,9 +38,16 @@ svg {
 }
 
 nav {
+    display: flex;
+    flex-direction: column;
+
     &>* {
         margin: 0;
         padding: 30px 0px;
+    }
+
+    & :last-child {
+        margin-top: auto;
     }
 
     & a {
