--- a/style.css
+++ b/style.css
@@ -42,8 +42,7 @@ nav {
     flex-direction: column;
 
     &>* {
-        margin: 0;
-        padding: 30px 0px;
+        padding: 0;
     }
 
     & :last-child {
@@ -51,7 +50,7 @@ nav {
     }
 
     & a {
-        padding: 5px 50px 5px 0;
+        padding: 5px 50px 5px 15px;
         color: inherit;
         text-decoration: inherit;
         display: flex;
@@ -60,7 +59,7 @@ nav {
         & svg {
             height: 40px;
             width: 40px;
-            padding: 0 15px;
+            margin-right: 15px;
         }
     }
 
@@ -76,6 +75,7 @@ nav {
 
     & ul {
         list-style: none;
+        margin: 30px 0px;
 
         & li {
             padding: 0;
