--- a/style.css
+++ b/style.css
@@ -87,3 +87,28 @@ nav {
         }
     }
 }
+
+main {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+        "projects announcements"
+        "projects trending";
+
+    & > * {
+        border: solid black;
+    }
+
+    & #projects {
+        grid-area: projects;
+    }
+
+    & #announcements {
+        grid-area: announcements;
+    }
+
+    & #trending {
+        grid-area: trending;
+    }
+}
