--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ svg {
     fill: currentColor;
 }
 
+ul {
+    list-style: none;
+    padding: 0;
+}
+
 nav {
     display: flex;
     flex-direction: column;
@@ -74,11 +79,9 @@ nav {
     }
 
     & ul {
-        list-style: none;
         margin: 30px 0px;
 
         & li {
-            padding: 0;
             font-size: 1.1em;
         }
 
