--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ ul {
     padding: 0;
 }
 
+h1, h2, h3, h4, p {
+    margin: 2px;
+    padding: 0;
+}
+
 nav {
     display: flex;
     flex-direction: column;
@@ -107,8 +112,11 @@ main {
     & .card {
         background-color: white;
         border-radius: 5px;
-        padding: 10px;
+        padding: 20px;
         box-shadow: 1px 1px 3px 1px rgba(125, 125, 125, 0.267);
+        & p {
+            color: rgb(105, 105, 105);
+        }
     }
 
     & #projects {
