--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    font-family: arial;
+    font-family: 'Roboto', sans-serif;
     --nav-color: #1c94d3;
     --foreground-color: white;
     --middle-color: #e2e8f0;
