--- a/style.css
+++ b/style.css
@@ -42,7 +42,14 @@ ul {
     padding: 0;
 }
 
-h1, h2, h3, h4, p {
+h1, h2, h3, h4 {
+    font-weight: 700;
+    margin: 2px;
+    padding: 0;
+}
+
+p {
+    font-weight: 400;
     margin: 2px;
     padding: 0;
 }
@@ -50,6 +57,7 @@ h1, h2, h3, h4, p {
 nav {
     display: flex;
     flex-direction: column;
+    font-weight: 500;
 
     &>* {
         padding: 0;
