--- a/style.css
+++ b/style.css
@@ -42,7 +42,10 @@ ul {
     padding: 0;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     font-weight: 700;
     margin: 2px;
     padding: 0;
@@ -112,9 +115,9 @@ main {
         "projects announcements"
         "projects trending";
 
-    & > * {
-        border: solid black;
+    &>section {
         padding: 20px;
+        margin-top: 10px;
     }
 
     & .card {
@@ -122,6 +125,7 @@ main {
         border-radius: 5px;
         padding: 20px;
         box-shadow: 1px 1px 3px 1px rgba(125, 125, 125, 0.267);
+
         & p {
             color: rgb(105, 105, 105);
         }
@@ -129,7 +133,7 @@ main {
 
     & #projects {
         grid-area: projects;
-        
+
         & #project-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
@@ -137,7 +141,7 @@ main {
         }
 
         & .card {
-            border-left: 5px solid var(--flair-color);
+            border-left: 7px solid var(--flair-color);
         }
     }
 
