--- a/style.css
+++ b/style.css
@@ -113,8 +113,7 @@ main {
         "projects trending";
 
     &>section {
-        padding: 20px;
-        margin-top: 10px;
+        margin: 30px 20px;
     }
 
     & .card {
