--- a/style.css
+++ b/style.css
@@ -39,8 +39,6 @@ main {
 
 svg {
     fill: currentColor;
-    height: 40px;
-    width: 40px;
 }
 
 ul {
@@ -102,6 +100,8 @@ nav {
 
         & svg {
             transform: scale(0.6);
+            height: 40px;
+            width: 40px;
         }
     }
 }
@@ -113,6 +113,26 @@ header {
     grid-template-areas:
         "search personal"
         "greeting interact";
+    margin: 10px 40px;
+
+    & > * {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    & svg {
+        height: 30px;
+        width: 30px;
+    }
+
+    & #searchbar {
+        width: 90%;
+        height: 30px;
+        background-color: var(--middle-color);
+        border-radius: 30px;
+        border: 0;
+    }
 }
 
 main {
