--- a/style.css
+++ b/style.css
@@ -133,6 +133,16 @@ header {
         border-radius: 30px;
         border: 0;
     }
+
+    & button {
+        background-color: var(--nav-color);
+        color: white;
+        border: 0;
+        border-radius: 30px;
+        height: 60%;
+        font-weight: 700;
+        width: 7em;
+    }
 }
 
 main {
