fix announcements size

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ header {
 
 main {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 350px;
     grid-template-rows: 1fr 1fr;
     grid-template-areas:
         "projects announcements"
