--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ header {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
     margin: 10px 40px;
+    column-gap: 20px;
 
     & > * {
         display: flex;
@@ -124,21 +125,24 @@ header {
     }
 
     & #searchbar {
-        width: 90%;
+        width: 100%;
         height: 30px;
         background-color: var(--middle-color);
         border-radius: 30px;
         border: 0;
     }
 
-    & button {
-        background-color: var(--nav-color);
-        color: white;
-        border: 0;
-        border-radius: 30px;
-        height: 60%;
-        font-weight: 700;
-        width: 7em;
+    & #interact {
+        justify-content: flex-end;
+        & button {
+            background-color: var(--nav-color);
+            color: white;
+            border: 0;
+            border-radius: 30px;
+            height: 60%;
+            font-weight: 700;
+            width: 7em;
+        }
     }
 }
 
