--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h2,
 h3,
 h4 {
     font-weight: 700;
-    margin: 2px;
+    margin: 0.2em;
 }
 
 p {
@@ -110,7 +110,7 @@ header {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
-    margin: 10px 60px;
+    margin: 10px 40px;
     column-gap: 20px;
 
     & > * {
