--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ nav {
     }
 
     & a:hover {
-        backdrop-filter: brightness(85%);
+        backdrop-filter: brightness(110%);
+        box-shadow: 0px 1px 0px 0px rgba(125, 125, 125, 0.1);
     }
 
     & #title {
