consistent project card height

--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ main {
         & #project-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-auto-rows: 1fr;
             gap: 20px;
         }
 
