--- a/style.css
+++ b/style.css
@@ -179,10 +179,9 @@ main {
     grid-template-areas:
         "projects announcements"
         "projects trending";
-
-    &>section {
-        margin: 30px 20px;
-    }
+    
+    padding: 20px;
+    gap: 40px;
 
     & .card {
         background-color: white;
@@ -245,7 +244,7 @@ main {
             -webkit-box-orient: vertical;
             text-overflow: ellipsis;
             overflow: hidden;
-            font-size: 0.9em;
+            font-size: 0.85em;
         }
     }
 
