--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h5 {
 }
 
 hr {
-    width: 80%;
+    width: 85%;
     margin: auto;
     border: 1px solid rgb(232, 232, 232);
 }
@@ -69,6 +69,9 @@ nav {
     display: flex;
     flex-direction: column;
     font-weight: 500;
+    height: 100vh;
+    position: sticky;
+    top: 0;
 
     & :last-child {
         margin-top: auto;
