--- a/style.css
+++ b/style.css
@@ -256,11 +256,17 @@ main {
                 flex-direction: column;
                 gap: 10px;
             }
+
             & .user {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 gap: 10px;
+
+                & svg {
+                    width: 50px;
+                    height: 50px;
+                }
 
                 & p {
                     color: rgb(105, 105, 105);
