--- a/style.css
+++ b/style.css
@@ -228,53 +228,62 @@ main {
         }
     }
 
-    & aside {
-        flex: 0 0 300px;
-
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-
-        & #announcements {
-            & .announcement {
-                padding: 8px;
-            }
-
-            & p {
-                color: rgb(105, 105, 105);
-                display: -webkit-box;
-                -webkit-line-clamp: 3;
-                -webkit-box-orient: vertical;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                font-size: 0.85em;
-            }
+    @media (max-width: 999px) {
+        & aside {
+            display: none;
+            visibility: hidden;
         }
+    }
 
-        & #trending {
-            & .card {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-            }
-
-            & .user {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                gap: 10px;
-
-                & svg {
-                    width: 50px;
-                    height: 50px;
+    @media (min-width: 1000px) {
+        & aside {
+            flex: 0 0 300px;
+    
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+    
+            & #announcements {
+                & .announcement {
+                    padding: 8px;
                 }
-
+    
                 & p {
                     color: rgb(105, 105, 105);
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
                     font-size: 0.85em;
                 }
             }
-
+    
+            & #trending {
+                & .card {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                }
+    
+                & .user {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 10px;
+    
+                    & svg {
+                        width: 50px;
+                        height: 50px;
+                    }
+    
+                    & p {
+                        color: rgb(105, 105, 105);
+                        font-size: 0.85em;
+                    }
+                }
+    
+            }
         }
     }
 
