--- a/style.css
+++ b/style.css
@@ -97,7 +97,14 @@ nav {
             padding-right: 35px;
 
             @media (max-width: 999px) {
-                display: none;
+                position: absolute;
+                width: 1px;
+                height: 1px;
+                padding: 0;
+                margin: -1px;
+                overflow: hidden;
+                clip: rect(0,0,0,0);
+                border: 0;
             }
         }
 
