--- a/style.css
+++ b/style.css
@@ -137,25 +137,26 @@ nav {
 }
 
 header {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     margin: 10px 40px;
-    column-gap: 20px;
-
-    &>* {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
+    gap: 20px;
 
     & svg {
         height: 30px;
         width: 30px;
     }
 
+    @media (max-width: 750px) {
+        & #searchbar {
+            display: none;
+        }
+    }
+
     & #searchbar {
-        width: 100%;
+        padding-left: 20px;
+        min-width: max(30%, 300px);
         height: 30px;
         background-color: var(--middle-color);
         border-radius: 30px;
@@ -163,42 +164,11 @@ header {
     }
 
     & #personal {
-        justify-content: flex-end;
+        margin-left: auto;
         @media (max-width: 750px) {
             & #name {
                 display: none;
             }
-        }
-    }
-
-    & #greeting {
-        @media (max-width: 750px) {
-            display: none;
-        }
-        & p {
-            font-weight: 700;
-        }
-
-        & #greeting-text {
-            font-size: 0.9em;
-        }
-
-        & #username {
-            font-size: 1.5em;
-        }
-    }
-
-    & #interact {
-        justify-content: flex-end;
-
-        & button {
-            background-color: var(--nav-color);
-            color: white;
-            border: 0;
-            border-radius: 30px;
-            height: 2.5em;
-            font-weight: 700;
-            width: 7em;
         }
     }
 }
