--- a/style.css
+++ b/style.css
@@ -170,13 +170,14 @@ header {
 
 main {
     display: flex;
-    padding: 20px;
-    gap: 40px;
+    padding: 30px;
+    gap: 30px;
 
     & .card {
         background-color: white;
         border-radius: 5px;
         padding: 20px;
+        margin: 10px;
         box-shadow: 1px 1px 3px 1px rgba(125, 125, 125, 0.267);
     }
 
@@ -187,7 +188,6 @@ main {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             grid-auto-rows: 1fr;
-            gap: 20px;
         }
 
         & .card {
@@ -200,7 +200,7 @@ main {
             display: flex;
             justify-content: flex-end;
             margin-top: auto;
-            gap: 20px;
+            gap: 10px;
             padding-top: 10px;
 
             & img {
