--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ nav {
     position: sticky;
     top: 0;
 
+    @media (max-width: 500px) {
+        display: none;
+    }
+
     & :last-child {
         margin-top: auto;
     }
@@ -170,14 +174,30 @@ header {
 
 main {
     display: flex;
-    padding: 30px;
-    gap: 30px;
+    @media (min-width: 501px) {
+        padding: 30px;
+
+        & #project-container {
+            gap: 20px;
+        }
+    }
+    @media (max-width: 500px) {
+        padding: 10px;
+
+        & #project-container {
+            gap: 15px;
+        } 
+    }
+    gap: 40px;
+
+    & h3 {
+        margin-bottom: 0.5em;
+    }
 
     & .card {
         background-color: white;
         border-radius: 5px;
         padding: 20px;
-        margin: 10px;
         box-shadow: 1px 1px 3px 1px rgba(125, 125, 125, 0.267);
     }
 
